# llmscout

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/llmscout/: __main__.py
src/llmscout/cli/: __init__.py  scanner.py
src/llmscout/cli/litellm_patched/: __init__.py  export.py
